src/test/wacc/invalid/semanticErr/read/readIntoBadSnd.wacc
#  If we are reading into a pair projection, the element must be readable

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(bool, bool) p = null;
  read snd p
end